# capstone

./: CMakeLists.txt  manifest.json
data/: landmarks.yaml  landmarks.yaml~  map.yaml~  nodes.yaml  topic_list.yaml  topic_list.yaml~
for Report/directions/: default start and end(string).txt  diagonal(string).txt  simple path vertical(string).txt  top left corner to bottom left corner(string).txt
for Report/user feedback/Denis Draca/: Denis Draca.txt
include/: nodegen.cpp  nodegen.h
include/a_start/: main_path.h  mainwindow.h  path.h
launch/: a_start.launch  a_start.launch~
scripts/: node_gen.py  node_gen.py~  test.py
src/: main.cpp  mainwindow.cpp  path.cpp  visual.cpp
src/Main_path/: main_path.cpp  main_path.h  main_path_in.cpp
src/Path_planner/: path.cpp
src/Visualisation/: mainwindow.cpp
ui/: mainwindow.ui
